[gd_scene load_steps=8 format=3 uid="uid://covdqevopoa8b"]

[ext_resource type="Script" path="res://src/ui/ui.gd" id="1_oeybr"]
[ext_resource type="Texture2D" uid="uid://badrvk5us8ycx" path="res://assets/images/menu/background.png" id="1_v1vsa"]
[ext_resource type="Theme" uid="uid://buf372q2bwhew" path="res://resources/theme/base_theme.tres" id="2_71ie5"]
[ext_resource type="Texture2D" uid="uid://cd6hixyh8xkr" path="res://assets/images/ui/panel.png" id="3_g7yqn"]
[ext_resource type="PackedScene" uid="uid://danag68c0oepm" path="res://resources/scenes/ui/menu_button.tscn" id="4_blpqc"]
[ext_resource type="Script" path="res://src/ui/back_button.gd" id="6_oy6me"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_85yxa"]
texture = ExtResource("3_g7yqn")
region_rect = Rect2(0, 0, 592, 975)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_oeybr")

[node name="Background" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.00581)

[node name="BlackBackground" type="ColorRect" parent="Background"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="BackgroundImage" type="TextureRect" parent="Background"]
layout_mode = 2
offset_right = 1152.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_v1vsa")
ignore_texture_size = true

[node name="Main" type="CenterContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Main"]
custom_minimum_size = Vector2i(400, 400)
layout_direction = 1
layout_mode = 2
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_71ie5")
theme_override_styles/panel = SubResource("StyleBoxTexture_85yxa")

[node name="VBoxContainer" type="VBoxContainer" parent="Main/Panel"]
layout_mode = 0
offset_left = 72.0
offset_top = 12.0
offset_right = 438.0
offset_bottom = 509.0
scale = Vector2(0.74703, 0.74703)
theme_override_constants/separation = 19

[node name="NewGame" parent="Main/Panel/VBoxContainer" instance=ExtResource("4_blpqc")]
layout_mode = 2
offset_left = 0.0
offset_top = 0.0
offset_right = 366.0
offset_bottom = 67.0
grow_vertical = 2
scale = Vector2(1, 1)
label = "New game"

[node name="Continue" parent="Main/Panel/VBoxContainer" instance=ExtResource("4_blpqc")]
layout_mode = 2
offset_left = 0.0
offset_top = 86.0
offset_right = 366.0
offset_bottom = 153.0
scale = Vector2(1, 1)
label = "Continue"

[node name="Load" parent="Main/Panel/VBoxContainer" instance=ExtResource("4_blpqc")]
layout_mode = 2
offset_left = 0.0
offset_top = 172.0
offset_right = 366.0
offset_bottom = 239.0
scale = Vector2(1, 1)
label = "Load"

[node name="Save" parent="Main/Panel/VBoxContainer" instance=ExtResource("4_blpqc")]
visible = false
layout_mode = 2
offset_left = 0.0
offset_top = 213.0
offset_right = 366.0
offset_bottom = 280.0
scale = Vector2(1, 1)
label = "Save"

[node name="HowToPlay" parent="Main/Panel/VBoxContainer" instance=ExtResource("4_blpqc")]
layout_mode = 2
offset_left = 0.0
offset_top = 258.0
offset_right = 366.0
offset_bottom = 325.0
scale = Vector2(1, 1)
label = "How to play"

[node name="Settings" parent="Main/Panel/VBoxContainer" instance=ExtResource("4_blpqc")]
layout_mode = 2
offset_left = 0.0
offset_top = 344.0
offset_right = 366.0
offset_bottom = 411.0
scale = Vector2(1, 1)
label = "Settings"

[node name="Exit" parent="Main/Panel/VBoxContainer" instance=ExtResource("4_blpqc")]
layout_mode = 2
offset_left = 0.0
offset_top = 430.0
offset_right = 366.0
offset_bottom = 497.0
scale = Vector2(1, 1)
label = "Exit"

[node name="Settings" type="CenterContainer" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Settings"]
custom_minimum_size = Vector2i(400, 400)
layout_direction = 1
layout_mode = 2
offset_right = 400.0
offset_bottom = 400.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_71ie5")
theme_override_styles/panel = SubResource("StyleBoxTexture_85yxa")

[node name="Back" parent="Settings/Panel" instance=ExtResource("4_blpqc")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 96.0
offset_top = 140.0
offset_right = 462.0
offset_bottom = 207.0
grow_vertical = 2
script = ExtResource("6_oy6me")
label = "Back"

[node name="Config" type="MarginContainer" parent="Settings/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -36.0
offset_right = 4.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="Settings" type="TabContainer" parent="Settings/Panel/Config"]
layout_mode = 2
offset_left = 30.0
offset_top = 50.0
offset_right = 374.0
offset_bottom = 346.0
grow_horizontal = 2
grow_vertical = 2

[node name="Sound" type="MarginContainer" parent="Settings/Panel/Config/Settings"]
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Sound" type="VFlowContainer" parent="Settings/Panel/Config/Settings/Sound"]
layout_mode = 2
offset_left = 10.0
offset_top = 10.0
offset_right = 334.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2

[node name="Music" type="HBoxContainer" parent="Settings/Panel/Config/Settings/Sound/Sound"]
layout_mode = 2
offset_right = 344.0
offset_bottom = 24.0
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Settings/Panel/Config/Settings/Sound/Sound/Music"]
layout_mode = 2
offset_top = 2.0
offset_right = 47.0
offset_bottom = 21.0
text = "Music
"

[node name="MusicSlider" type="HSlider" parent="Settings/Panel/Config/Settings/Sound/Sound/Music"]
custom_minimum_size = Vector2i(150, 0)
layout_mode = 2
offset_left = 77.0
offset_right = 227.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 2.0

[node name="MusicMute" type="CheckButton" parent="Settings/Panel/Config/Settings/Sound/Sound/Music"]
layout_mode = 2
offset_left = 257.0
offset_right = 344.0
offset_bottom = 24.0
text = "Mute"

[node name="Fx" type="HBoxContainer" parent="Settings/Panel/Config/Settings/Sound/Sound"]
layout_mode = 2
offset_top = 28.0
offset_right = 344.0
offset_bottom = 52.0
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Settings/Panel/Config/Settings/Sound/Sound/Fx"]
layout_mode = 2
offset_top = 2.0
offset_right = 20.0
offset_bottom = 21.0
text = "Fx"

[node name="FxSlider" type="HSlider" parent="Settings/Panel/Config/Settings/Sound/Sound/Fx"]
custom_minimum_size = Vector2i(150, 0)
layout_mode = 2
offset_left = 50.0
offset_right = 227.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 2.0
value = 2.0

[node name="FxMute" type="CheckButton" parent="Settings/Panel/Config/Settings/Sound/Sound/Fx"]
layout_mode = 2
offset_left = 257.0
offset_right = 344.0
offset_bottom = 24.0
text = "Mute"

[node name="Ui" type="HBoxContainer" parent="Settings/Panel/Config/Settings/Sound/Sound"]
layout_mode = 2
offset_top = 56.0
offset_right = 344.0
offset_bottom = 80.0
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="Settings/Panel/Config/Settings/Sound/Sound/Ui"]
layout_mode = 2
offset_top = 2.0
offset_right = 18.0
offset_bottom = 21.0
text = "Ui        
"

[node name="UiSlider" type="HSlider" parent="Settings/Panel/Config/Settings/Sound/Sound/Ui"]
custom_minimum_size = Vector2i(150, 0)
layout_mode = 2
offset_left = 48.0
offset_right = 227.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -50.0
max_value = 2.0
value = 2.0

[node name="UiMute" type="CheckButton" parent="Settings/Panel/Config/Settings/Sound/Sound/Ui"]
layout_mode = 2
offset_left = 257.0
offset_right = 344.0
offset_bottom = 24.0
text = "Mute"

[node name="Display" type="MarginContainer" parent="Settings/Panel/Config/Settings"]
visible = false
layout_mode = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 24.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 14
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Screen" type="VFlowContainer" parent="Settings/Panel/Config/Settings/Display"]
layout_mode = 2
offset_left = 14.0
offset_top = 10.0
offset_right = 334.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2

[node name="FullScreen" type="CheckButton" parent="Settings/Panel/Config/Settings/Display/Screen"]
layout_mode = 2
offset_right = 140.0
offset_bottom = 24.0
text = "Fullscreen"

[node name="Vsync" type="CheckButton" parent="Settings/Panel/Config/Settings/Display/Screen"]
layout_mode = 2
offset_top = 28.0
offset_right = 140.0
offset_bottom = 52.0
text = "Vsync"

[node name="Fps" type="CheckButton" parent="Settings/Panel/Config/Settings/Display/Screen"]
layout_mode = 2
offset_top = 56.0
offset_right = 140.0
offset_bottom = 80.0
text = "ShowFps
"

[node name="HowToPlay" type="AspectRatioContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Panel" type="Panel" parent="HowToPlay"]
layout_mode = 2
offset_left = 252.0
offset_right = 900.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
size_flags_stretch_ratio = 1.07
theme = ExtResource("2_71ie5")
theme_override_styles/panel = SubResource("StyleBoxTexture_85yxa")

[node name="Label" type="Label" parent="HowToPlay/Panel"]
layout_mode = 0
offset_left = 276.0
offset_top = 208.0
offset_right = 366.0
offset_bottom = 231.0
text = "Guide here
"

[node name="Back" parent="HowToPlay/Panel" instance=ExtResource("4_blpqc")]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 212.0
offset_top = 268.0
offset_right = 578.0
offset_bottom = 335.0
grow_vertical = 2
script = ExtResource("6_oy6me")
label = "Back"

[connection signal="pressed" from="Main/Panel/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/Load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Main/Panel/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Settings/Panel/Back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Settings/Panel/Config/Settings/Sound/Sound/Music/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="toggled" from="Settings/Panel/Config/Settings/Sound/Sound/Music/MusicMute" to="." method="_on_music_mute_toggled"]
[connection signal="value_changed" from="Settings/Panel/Config/Settings/Sound/Sound/Fx/FxSlider" to="." method="_on_fx_slider_value_changed"]
[connection signal="toggled" from="Settings/Panel/Config/Settings/Sound/Sound/Fx/FxMute" to="." method="_on_fx_mute_toggled"]
[connection signal="value_changed" from="Settings/Panel/Config/Settings/Sound/Sound/Ui/UiSlider" to="." method="_on_ui_slider_value_changed"]
[connection signal="toggled" from="Settings/Panel/Config/Settings/Sound/Sound/Ui/UiMute" to="." method="_on_ui_mute_toggled"]
[connection signal="toggled" from="Settings/Panel/Config/Settings/Display/Screen/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Settings/Panel/Config/Settings/Display/Screen/Vsync" to="." method="_on_vsync_toggled"]
[connection signal="toggled" from="Settings/Panel/Config/Settings/Display/Screen/Fps" to="." method="_on_fps_toggled"]
[connection signal="pressed" from="HowToPlay/Panel/Back" to="." method="_on_back_pressed"]
